# glove-semantic-explorer

./: Dockerfile  README.md  compose.yaml  pyproject.toml  requirements.txt
glove_semantic_explorer/: __main__.py  cli.py  templates.py
src/: run_application.py  train_embeddings.py
